--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,8 +67,8 @@ p {
   font-weight: bold;
   line-height: 1;
   &:hover {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
   }
 }
 
@@ -82,7 +82,7 @@ footer {
   a {
     color: #555;
     &:hover {
-    color: #222;
+      color: #222;
     }
   }
   small {
@@ -104,4 +104,34 @@ footer {
   float: left;
   width: 100%;
   margin-top: 45px;
+}
+
+/* sidebar */
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid $lightGray;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
 }
