Add test that the flash error message not appear on second request

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
         </ul>
-          <li><%= link_to "Sign in", '#' %></li>
+          <li><%= link_to "Sign in", signin_path %></li>
       </div>
     </div>
   </div>
