--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -159,3 +159,18 @@ input {
 
 .field_with_errors {
 }
+
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid lightGray;
+    &:last-child {
+      border-bottom: 1px solid lightGray;
+    }
+  }
+}
