--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
   <div class="row">
-    <aside class="span4">
+    <aside class="col-lg-4 col-md-4 col-sm-4">
       <section>
         <%= render 'shared/user_info' %>
       </section>
@@ -8,6 +8,10 @@
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
+    <div class='col-lg-8 col-md-8 col-sm-8'>
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
   </div>
 <% else %>
 
